--- a/fronted/public/index.html
+++ b/fronted/public/index.html
@@ -9,11 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
-    <title>Twitter</title>
+  
+  
+    <title> x </title>
   </head>
   <body>
+  
     <div id="root"></div>
-    
+   
   </body>
 </html>
